1.8-the-project-step-5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-svc
spec:
  type: NodePort
  selector:
    app: the-project # This is the app as declared in the deployment.
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8080
